--- a/src/pages/auth/styles/Login.css
+++ b/src/pages/auth/styles/Login.css
@@ -1,21 +1,3 @@
-body {
-    font-family: Arial, sans-serif;
-    background-color: #f0f2f5;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 100vh;
-    margin: 0;
-}
-
-.login-container {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    width: 100%;
-    height: 100%;
-}
-
 .login-box {
     background-color: #fff;
     padding: 20px;
@@ -23,15 +5,13 @@ body {
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
     width: 300px;
     text-align: center;
-}
-
-.login-box h2 {
-    margin-bottom: 20px;
-    color: #333;
+    box-sizing: border-box;
 }
 
 .input-group {
+    margin-top: 10px;
     margin-bottom: 15px;
+    width: 100%;
 }
 
 .input-group input {
@@ -51,27 +31,53 @@ body {
     color: #fff;
     font-size: 16px;
     cursor: pointer;
-}
-
-.login-button:hover {
-    background-color: #0056b3;
+    box-sizing: border-box;
+    margin: 0;
+    /* Adicione esta linha */
 }
 
 .message {
-    margin-top: 15px;
     color: #d9534f;
+    width: 100%;
+    text-align: center;
+    margin-top: 25px;
+    /* Adicione esta linha */
 }
 
 .register-prompt {
-    margin-top: 20px;
     color: #333;
+    width: 100%;
+    text-align: center;
+    margin-top: 25px;
+    /* Adicione esta linha */
 }
 
-.register-prompt a {
-    color: #007bff;
-    text-decoration: none;
+.loading-spinner {
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    border: 8px solid #f3f3f3;
+    border-top: 8px solid #007bff;
+    border-radius: 50%;
+    width: 60px;
+    height: 60px;
+    animation: spin 1s linear infinite;
+    z-index: 1000;
+    /* Certifique-se de que a animação fique acima de outros elementos */
 }
 
-.register-prompt a:hover {
-    text-decoration: underline;
+@keyframes spin {
+    0% {
+        transform: rotate(0deg);
+    }
+
+    100% {
+        transform: rotate(360deg);
+    }
+}
+
+.login-box.loading {
+    opacity: 0.5;
+    /* Opcional: para dar um efeito de desativação na caixa de login */
 }
