--- a/src/pages/auth/styles/Register.css
+++ b/src/pages/auth/styles/Register.css
@@ -24,12 +24,23 @@ body {
 
 /* Formulário de Registro */
 .register-form {
-    max-width: 400px;
+    /* max-width: 400px; */
+    width: 65vh;
     margin: 50px auto;
     padding: 20px;
     border: 1px solid var(--primary-color);
     border-radius: 5px;
     background-color: #f9f9f9;
+}
+
+.register-box {
+    background-color: #fff;
+    padding: 20px;
+    border-radius: 8px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    width: 61vh;
+    text-align: center;
+    box-sizing: border-box;
 }
 
 .register-form__input {
@@ -38,6 +49,22 @@ body {
     margin-bottom: 15px;
     border: 1px solid #ccc;
     border-radius: 3px;
+    text-align: left;
+}
+
+.register-form__label {
+    display: block;
+    text-align: left;
+    font-size: 1.2em;
+    /* Aumenta o tamanho da fonte */
+    margin-bottom: 5px;
+    /* Espaço entre o label e o input */
+}
+
+.register-form__button,
+.text-center {
+    margin-left: 0;
+    margin-right: 0;
 }
 
 .register-form__button {
@@ -59,4 +86,49 @@ body {
 .text-center {
     text-align: center;
     margin-bottom: 15px;
+}
+
+.register-button {
+    width: 100%;
+    padding: 10px;
+    background-color: #007bff;
+    border: none;
+    border-radius: 4px;
+    color: #fff;
+    font-size: 16px;
+    cursor: pointer;
+    box-sizing: border-box;
+    margin: 0;
+    margin-bottom: 10px;
+    /* Adicione esta linha */
+}
+
+.loading-spinner {
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    border: 8px solid #f3f3f3;
+    border-top: 8px solid #007bff;
+    border-radius: 50%;
+    width: 60px;
+    height: 60px;
+    animation: spin 1s linear infinite;
+    z-index: 1000;
+    /* Certifique-se de que a animação fique acima de outros elementos */
+}
+
+@keyframes spin {
+    0% {
+        transform: rotate(0deg);
+    }
+
+    100% {
+        transform: rotate(360deg);
+    }
+}
+
+.register-box.loading {
+    opacity: 0.5;
+    /* Opcional: para dar um efeito de desativação na caixa de login */
 }
